[package]
name = "mineplace3d-launcher"
version = "0.3.1"
edition = "2024"

[dependencies]
bytes = "1.11.0"
chrono = "0.4.45"
dirs = "6.0.0"
iced = { version = "0.14.0", features = ["tokio"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "stream", "rustls-no-provider"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["macros", "tokio-macros"] }
zip = "7.0.0"
